feat: add domain SMTP auth keys
